--- a/src/App.css
+++ b/src/App.css
@@ -1,31 +1,95 @@
-.App {
-  text-align: center;
+
+
+
+.text-link {
+  color: black;
+  text-decoration: none;
+  border-bottom: .0625em solid lighten(#98489D,40%);
+  border-bottom-color: lighten(#98489D,40%);
+  border-bottom-style: solid;
+  border-bottom-width: .0625em;
+  box-shadow: 0 -.25em 0 lighten(#98489D,40%) inset;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.font-link {
+  font-family: 'Ibarra Real Nova', serif;
 }
+
+.App {
+  background-color: whitesmoke;
+  font-family: 'Ibarra Real Nova', serif;
+  display: flex;
+  flex-direction: row;
+  height: 100vh;
+}
+
+.border {
+  min-width: 25vw;
+  background-color:whitesmoke;
+}
+
+.Main {
+  height: 100vh;
+  min-width: 50vw;
+}
+
+.App-header {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  font-size: calc(10px + 2vmin);
+  color: black;
+  padding-top: 15vmin;
+  padding-bottom: 5vmin;
+}
+
+.text {
+  font-size: calc(10px + 1vmin);
+}
+
+
+.stagger {
+  padding-left: 5vmin;
+}
+
+.App-footer {
+  text-align: center;
+  background-color: whitesmoke;
+  display: flex;
+  flex-direction: column;
+  padding-bottom: 5vmin;
+  font-size: calc(10px + 1vmin);
+  
+  position: fixed;
+  bottom: 0;
+  width: 50%;
+}
+
+.Icons-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  gap: calc(5px + 2vmin);
+  padding-top: 5vmin;
+}
+
+.Icons {
+  height: calc(10px + 3vmin);
+  width: calc(10px + 3vmin);
+}
+
+/* a:link { text-decoration: none;}
+a:visited { text-decoration: none; color:black}
+a:hover { text-decoration: none; }
+a:active { text-decoration: none; } */
+
+
+
 
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
   }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
 }
 
 @keyframes App-logo-spin {
