--- a/src/App.css
+++ b/src/App.css
@@ -30,6 +30,13 @@
   height: 100vh;
   min-width: 50vw;
 }
+.Main-landing {
+  height: 100vh;
+  min-width: 100vw;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
 
 .App-header {
   display: flex;
